--- a/.config/git/config
+++ b/.config/git/config
@@ -6,6 +6,7 @@
 	hub = !git config user.name Lina && git config user.email 36717206+linabeee@users.noreply.github.com && git config --local --get-regexp user
 	lab = !git config user.name Lina && git config user.email 4982999-flatulation@users.noreply.gitlab.com && git config --local --get-regexp user
 	ci = commit
+	st = status
 [pull]
 	rebase = false
 [init]
