--- a/.config/git/config
+++ b/.config/git/config
@@ -7,6 +7,7 @@
 	lab = !git config user.name Lina && git config user.email 4982999-flatulation@users.noreply.gitlab.com && git config --local --get-regexp user
 	ci = commit
 	st = status
+	diff = diff ':!package-lock.json' ':!yarn.lock' ':!pnpm-lock.yaml'
 [pull]
 	rebase = false
 [init]
