--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen.xterm-256color"
+set -sa terminal-overrides ',xterm-256color:RGB'
 set -g base-index 1
 set -g escape-time 0
 set -g set-titles on
