--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -2,7 +2,7 @@ no-osc
 hwdec=vaapi
 sub-auto=fuzzy
 alang=jp,jpn,en,eng
-slang=en,eng
+slang=eng,en
 save-position-on-quit
 sub-file-paths=Subs/
 sub-font=Helvetica
@@ -12,7 +12,12 @@ no-keepaspect-window
 vo=gpu
 scale=spline36
 cscale=spline36
+tscale=oversample
 quiet
 
 [drc]
 af=lavfi=dynaudnorm
+
+[interp]
+interpolation
+video-sync=display-resample
