--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
+set -g default-terminal screen-256color
 set -g base-index 1
 set -g escape-time 0
 set -g set-titles on
 set -g mouse on
 set -g status-style bg=brightblack,fg=default
 set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}#{=21:pane_title}"
+set -g status-position top
 setw -g mode-keys vi
