--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/pack/plugins/opt/vim-polyglot"]
 	path = .vim/pack/plugins/opt/vim-polyglot
 	url = https://github.com/sheerun/vim-polyglot
+[submodule ".rbenv/plugins/ruby-build"]
+	path = .local/share/rbenv/plugins/ruby-build
+	url = https://github.com/rbenv/ruby-build
