--- a/.config/git/config
+++ b/.config/git/config
@@ -3,7 +3,7 @@
 [credential]
 	helper = cache
 [alias]
-	hub = !git config user.name lina && git config user.email 36717206+linabeee@users.noreply.github.com && git config --local --get-regexp user
+	hub = !git config user.name lina && git config user.email 36717206+lina-bh@users.noreply.github.com && git config --local --get-regexp user
 	ci = commit
 	st = status
 [init]
