--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,10 +1,10 @@
 alang=jp,jpn,en,eng
 slang=eng,en
 
-sub-auto=fuzzy
+sub-auto=all
 sub-file-paths=Subs/
-sub-font=Helvetica
-osd-font=Noto Sans
+sub-font=Liberation Sans
+osd-font=Liberation Sans
 
 vo=gpu
 scale=spline36
