--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -3,17 +3,20 @@ slang=eng,en
 
 sub-auto=all
 sub-file-paths=Subs/
-sub-font=Liberation Sans
-osd-font=Liberation Sans
+# sub-font=Liberation Sans
+# osd-font=Liberation Sans
 
-vo=gpu
-scale=spline36
-cscale=spline36
+# hwdec=auto
+# vo=libmpv,gpu
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
 tscale=oversample
+dscale=mitchell
+video-sync=display-resample
 
 window-maximized=yes
 no-keepaspect-window
-x11-bypass-compositor=no
+#x11-bypass-compositor=no
 
 no-osc
 quiet
@@ -24,4 +27,3 @@ af=lavfi=dynaudnorm
 
 [interp]
 interpolation
-video-sync=display-resample
