--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,10 @@
-set -g default-terminal screen.xterm-256color
+set -g default-terminal screen-256color
 set -g base-index 1
 set -g repeat-time 0
 set -g escape-time 0
 set -g set-titles on
 set -g mouse on
-set -g status-style bg=brightblack,fg=default
+set -g status-style bg=default,fg=default
 set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}#{=21:pane_title}"
 setw -g mode-keys vi
 bind h select-pane -L
