--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,29 +1,35 @@
 alang=jp,jpn,en,eng
 slang=eng,en
-
-sub-auto=all
-sub-file-paths=Subs/
-# sub-font=Liberation Sans
-# osd-font=Liberation Sans
-
-# hwdec=auto
-# vo=libmpv,gpu
+sub-font=Helvetica
+osd-font=Helvetica
+sub-pos=97
+hwdec=auto-safe
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 tscale=oversample
-dscale=mitchell
 video-sync=display-resample
-
-window-maximized=yes
-no-keepaspect-window
-#x11-bypass-compositor=no
-
 no-osc
 quiet
 save-position-on-quit
+macos-title-bar-appearance=darkAqua
 
 [drc]
 af=lavfi=dynaudnorm
 
 [interp]
 interpolation
+
+# sub-auto=all
+# sub-file-paths=Subs/
+#dscale=mitchell
+#dither-depth=auto
+#sigmoid-upscaling=yes
+#correct-downscaling=yes
+#linear-downscaling=yes
+#deband=no
+#scale-antiring=0.7 # luma upscale deringing
+#dscale-antiring=0.7 # luma downscale deringing
+#cscale-antiring=0.7 # chroma upscale deringing
+#window-maximized=yes
+#no-keepaspect-window
+#x11-bypass-compositor=no
