--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,7 @@
 [user]
 	useConfigOnly = true
+	name = lina
+	email = 36717206+lina-bh@users.noreply.github.com
 [credential]
 	helper = cache
 [alias]
@@ -12,3 +14,8 @@
 	defaultBranch = main
 [advice]
 	addIgnoredFile = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
