--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -2,24 +2,35 @@ alang=jp,jpn,en,eng
 slang=eng,en
 sub-font=Helvetica
 osd-font=Helvetica
+sub-auto=all
 sub-pos=97
-hwdec=auto-safe
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-tscale=oversample
-video-sync=display-resample
+sub-ass-override=strip
+#hwdec=auto-safe
+hwdec=auto
+#scale=ewa_lanczossharp
+#cscale=ewa_lanczossharp
+#tscale=oversample
 no-osc
 quiet
 save-position-on-quit
-macos-title-bar-appearance=darkAqua
-
-[drc]
+#macos-title-bar-appearance=darkAqua
+vd-lavc-fast
 af=lavfi=dynaudnorm
+ytdl-format=best[height=720][fps=60][vcodec!=av1]/bestvideo[height=720][fps=60][vcodec!=av1]+bestaudio/best[height=480][vcodec!=av1]/bestvideo[height=480][vcodec!=av1]+bestaudio
+ytdl-raw-options=format-sort="hasvid,res:720,hasaud,+size",verbose=
+scale=bilinear
+dscale=bilinear
+dither=no
+correct-downscaling=no
+linear-downscaling=no
+sigmoid-upscaling=no
+hdr-compute-peak=no
+allow-delayed-peak-detect=yes
 
 [interp]
+video-sync=display-resample
 interpolation
 
-# sub-auto=all
 # sub-file-paths=Subs/
 #dscale=mitchell
 #dither-depth=auto
