--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,12 +1,13 @@
 alang=jp,jpn,en,eng
 slang=eng,en
-sub-font=Helvetica
+sub-font=Liberation Sans
 osd-font=Helvetica
 sub-auto=all
 sub-pos=97
 sub-ass-override=strip
-#hwdec=auto-safe
 hwdec=auto
+#hwdec=vaapi
+#ao=alsa
 #scale=ewa_lanczossharp
 #cscale=ewa_lanczossharp
 #tscale=oversample
@@ -16,8 +17,8 @@ save-position-on-quit
 #macos-title-bar-appearance=darkAqua
 vd-lavc-fast
 af=lavfi=dynaudnorm
-ytdl-format=best[height=720][fps=60][vcodec!=av1]/bestvideo[height=720][fps=60][vcodec!=av1]+bestaudio/best[height=480][vcodec!=av1]/bestvideo[height=480][vcodec!=av1]+bestaudio
-ytdl-raw-options=format-sort="hasvid,res:720,hasaud,+size",verbose=
+ytdl-format=best[height=720][fps=60]/bestvideo[height=720][fps=60]+bestaudio/bestvideo[height<=480][vcodec!*=av01]+bestaudio
+ytdl-raw-options=format-sort="hasvid,res:720,hasaud,+size",verbose=,cookies-from-browser=firefox
 scale=bilinear
 dscale=bilinear
 dither=no
