Update .ansible.cfg Update .config/topgrade.toml

--- a/dot_ansible.cfg
+++ b/dot_ansible.cfg
@@ -435,7 +435,7 @@
 
 [privilege_escalation]
 # (boolean) Display an agnostic become prompt instead of displaying a prompt containing the command line supplied become method.
-;agnostic_become_prompt=True
+agnostic_become_prompt=False
 
 # (boolean) When ``False``(default), Ansible will skip using become if the remote user is the same as the become user, as this is normally a redundant operation. In other words root sudo to root.
 # If ``True``, this forces Ansible to use the become plugin anyways as there are cases in which this is needed.
@@ -445,7 +445,7 @@
 ;become=False
 
 # (boolean) Toggle to prompt for privilege escalation password.
-;become_ask_pass=False
+become_ask_pass=True
 
 # (string) executable to use for privilege escalation, otherwise Ansible will depend on PATH.
 ;become_exe=
