--- a/dot_config/mpv/mpv.conf
+++ b/dot_config/mpv/mpv.conf
@@ -1,7 +1,7 @@
 alang=jp,jpn,en,eng
 slang=eng,en
 sub-font=Liberation Sans
-osd-font=Helvetica
+osd-font=Liberation Sans
 sub-auto=all
 sub-pos=97
 sub-ass-override=strip
@@ -38,10 +38,11 @@ interpolation
 #sigmoid-upscaling=yes
 #correct-downscaling=yes
 #linear-downscaling=yes
-#deband=no
+deband=no
 #scale-antiring=0.7 # luma upscale deringing
 #dscale-antiring=0.7 # luma downscale deringing
 #cscale-antiring=0.7 # chroma upscale deringing
-#window-maximized=yes
-#no-keepaspect-window
+window-maximized=yes
+no-keepaspect-window
 #x11-bypass-compositor=no
+vo=gpu-next
