--- a/dot_config/chromium-flags.conf
+++ b/dot_config/chromium-flags.conf
@@ -1,1 +1,5 @@
+features+=Vulkan,VulkanFromANGLE,DefaultANGLEVulkan,VaapiIgnoreDriverChecks,VaapiVideoDecoder,UseMultiPlaneFormatForHardwareVideo
+--use-gl=angle
+--use-angle=vulkan
 --ozone-platform=wayland
+--enable-accelerated-video-decode
